# leptos_personal_web

./: Cargo.toml  run.sh
apps/: Cargo.toml
apps/src/: lib.rs
apps/src/pages/: mod.rs
apps/src/styles/: main.module.scss
apps/src/views/components/navigation/: mod.rs  nav_data.rs
apps/src/views/pages/: mod.rs
apps/src/views/pages/homepage/: mod.rs
apps/src/views/pages/not_found/: mod.rs
apps/src/views/pages/portofolio/: mod.rs
apps/src/views/pages/profile/: mod.rs
hydrate/: Cargo.toml
hydrate/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
stylance/: _index.scss  main.module-fd36f7c.scss
