[package]
name = "apps"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

[features]
ssr = ["leptos/ssr","leptos_meta/ssr","leptos_router/ssr"]
hydrate = ["leptos/hydrate","leptos_meta/hydrate","leptos_router/hydrate"]
