[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
apps = {path = "../apps"}
actix-files = "0.6.6"
actix-web = { version = "4.9.0", features = ["macros"] }
leptos = { version = "0.6.15", features = ["ssr"] }
leptos_actix = "0.6.15"
leptos_meta = { version = "0.6.15", features = ["ssr"] }
leptos_router = { version = "0.6.15", features = ["ssr"] }
thaw = { version = "0.3.4", features = ["ssr"] }
